Change image titles and test local link in index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
           <div class="med-spacing col-md-6">
             <div class="media">
               <div class="media-left">
-                <img class="med-img img-responsive" src="https://dl.dropboxusercontent.com/s/8aej3y8enh5p4n5/Bryce%20Inspiration%20Point-25.jpg" alt="Overlook of Bryce Canyon at Inspiration Point"/>
+                <!-- <img class="med-img img-responsive" src="https://dl.dropboxusercontent.com/s/8aej3y8enh5p4n5/Bryce%20Inspiration%20Point-25.jpg" alt="Overlook of Bryce Canyon at Inspiration Point"/> -->
+                <img class="med-img img-responsive" src="./Images/BryceInspirationPoint-25.jpg" alt="Overlook of Bryce Canyon at Inspiration Point"/>
               </div>
               <div class="media-body">
                 <p class="med-p">Technically, Bryce in not a true canyon (as those are carved by flowing water), but a series of amphitheaters. That said, water is still the erosive force behind the geological formations in the form of "frost-wedging" and chemical weathering.</p>
