Update image sources to local folder

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
           <div class="med-spacing col-md-6">
             <div class="media">
               <div class="media-left">
-                <!-- <img class="med-img img-responsive" src="https://dl.dropboxusercontent.com/s/8aej3y8enh5p4n5/Bryce%20Inspiration%20Point-25.jpg" alt="Overlook of Bryce Canyon at Inspiration Point"/> -->
                 <img class="med-img img-responsive" src="./Images/BryceInspirationPoint-25.jpg" alt="Overlook of Bryce Canyon at Inspiration Point"/>
               </div>
               <div class="media-body">
@@ -54,7 +53,7 @@
                 <p class="med-p">For 200 days a year the temperature goes above and below freezing every day. During the day, melt water seeps into fractures only to freeze at night, expanding by 9%. As ice, it exerts a tremendous force (2,000-20,000 pounds per square inch). Over time this "frost-wedging" shatters and pries rock apart.</p>
               </div>
               <div class="media-right">
-                <img class="med-img img-responsive" src="https://dl.dropboxusercontent.com/s/bxig3ga8rkbyuis/Bryce%20Navajo%20Loop%20and%20Queens%20Garden%20Hike-52.jpg" alt="Blue skies over Bryce Canyon formation detail"/>
+                <img class="med-img img-responsive" src="./Images/BryceNavajoLoopandQueensGardenHike-52.jpg" alt="Blue skies over Bryce Canyon formation detail"/>
               </div>
             </div>
           </div>
@@ -65,7 +64,7 @@
           <div class="med-spacing col-md-6">
             <div class="media">
               <div class="media-left">
-                <img class="med-img img-responsive" src="https://dl.dropboxusercontent.com/s/9cznaxnxm1007s9/Bryce%20Navajo%20Loop%20and%20Queens%20Garden%20Hike-9.jpg" alt="Bryce Canyon orange rock formation"/>
+                <img class="med-img img-responsive" src="./Images/BryceNavajoLoopandQueensGardenHike-9.jpg" alt="Bryce Canyon orange rock formation"/>
               </div>
               <div class="media-body">
                 <p class="med-p">The erosional force of frost-wedging and the dissolving power of rainwater has shaped the colorful limestone rock of the Claron Formation into bizarre shapes including slot canyons, windows, fins, and spires.</p>
@@ -80,7 +79,7 @@
                 <p class="med-p">Bryce Canyon National Park has eight marked and maintained trails for day hiking ranging from easy to strenuous, in addition to several overnight options requiring a backcountry permit. In total there are 50 miles of trails in the park. Other activities, such as snowshoeing and horseback riding, are available certain times of year.</p>
               </div>
               <div class="media-right">
-                <img class="med-img img-responsive" src="https://dl.dropboxusercontent.com/s/k36lrlldnsv9trz/Bryce%20Navajo%20Loop%20and%20Queens%20Garden%20Hike-67.jpg" alt="Hiker on Bryce Canyon rim"/>
+                <img class="med-img img-responsive" src="./Images/BryceNavajoLoopandQueensGardenHike-67.jpg" alt="Hiker on Bryce Canyon rim"/>
               </div>
             </div>
           </div>
@@ -91,7 +90,7 @@
           <div class="med-spacing col-md-6">
             <div class="media">
               <div class="media-left">
-                <img class="med-img img-responsive" src="https://dl.dropboxusercontent.com/s/xcbxbpjhn1o0eqc/Bryce%20Navajo%20Loop%20and%20Queens%20Garden%20Hike-11.jpg" alt="View of Thor's Hammer and Bryce Canyon"/>
+                <img class="med-img img-responsive" src="./Images/BryceNavajoLoopandQueensGardenHike-11.jpg" alt="View of Thor's Hammer and Bryce Canyon"/>
               </div>
               <div class="media-body">
                 <p class="med-p">As a Class I air quality area, Bryce Canyon offers great visability on clear days, extending over 100 miles.  The park also has a 7.4 magnitude night sky, making it one of the darkest in North America. Stargazers can see 7,500 stars with the naked eye, versus the usual 2,000 in most places due to light pollution.</p>
@@ -106,7 +105,7 @@
                 <p class="med-p">As a highland plateau, Bryce gets much more rain than the lowlands below and stays cooler during hot summers. The result is an ecosystems that supports a wide array of plants and animals, most notably the Douglas fir and Ponderosa pine forests.</p>
               </div>
               <div class="media-right">
-                <img class="med-img img-responsive" src="https://dl.dropboxusercontent.com/s/zwesvx7w0nh5dcf/Bryce%20Navajo%20Loop%20and%20Queens%20Garden%20Hike-22.jpg" alt="Tree within orange canyon walls in Bryce Canyon"/>
+                <img class="med-img img-responsive" src="./Images/BryceNavajoLoopandQueensGardenHike-22.jpg" alt="Tree within orange canyon walls in Bryce Canyon"/>
               </div>
             </div>
           </div>
@@ -117,6 +116,7 @@
         <div class="row well">
           <div class="col-xs-12 text-center">
             <h4>For more information on Bryce Canyon National Park, visit the <a href="http://www.nps.gov/brca/index.htm" target="_blank">National Park Services</a> site or the <a href="https://en.wikipedia.org/wiki/Bryce_Canyon_National_Park" target="_blank">Wikipedia</a> article</h4>
+            <footer>&copy; Photos by Heather Kusmierz</footer>
           </div>
         </div>
 
