Add copy info for photos

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="row well">
           <div class="col-xs-12 text-center">
             <h4>For more information on Bryce Canyon National Park, visit the <a href="http://www.nps.gov/brca/index.htm" target="_blank">National Park Services</a> site or the <a href="https://en.wikipedia.org/wiki/Bryce_Canyon_National_Park" target="_blank">Wikipedia</a> article</h4>
-            <footer>&copy; Photos by Heather Kusmierz</footer>
+            <p>&copy; Photos by Heather Kusmierz</p>
           </div>
         </div>
 
